// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Kryptos (EC) export should export b64 1`] = `
{
  "algorithm": "ES512",
  "curve": "P-521",
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "privateKey": "MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIATAYo3DQYroDV5EgJSUs_kOIvnEScZen73gXa5oQkub0ekQmgOJdPQjINUsdYRn67QK_oBdNUhVbtG_qdxqIgarehgYkDgYYABACN2PIVpRTdfXLmNxkg8Bk2m5netqYsNW2Lefhklr2jfJiVUJUDPoZoGfabGzHEgsKjP2HRbPsEI_tND3x4N9VW0QAID2UYXa7GN0izHWIFRdjVYuR5-0jywFtd-o_N2POdrvlV8xumdVK-TiSPEIdfKoL_Iu0e7IKTsJsj-UmE8rDJnw",
  "publicKey": "MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAjdjyFaUU3X1y5jcZIPAZNpuZ3ramLDVti3n4ZJa9o3yYlVCVAz6GaBn2mxsxxILCoz9h0Wz7BCP7TQ98eDfVVtEACA9lGF2uxjdIsx1iBUXY1WLkeftI8sBbXfqPzdjzna75VfMbpnVSvk4kjxCHXyqC_yLtHuyCk7CbI_lJhPKwyZ8",
  "type": "EC",
  "use": "sig",
}
`;

exports[`Kryptos (EC) export should export der 1`] = `
{
  "algorithm": "ES512",
  "curve": "P-521",
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "privateKey": {
    "data": [
      48,
      129,
      238,
      2,
      1,
      0,
      48,
      16,
      6,
      7,
      42,
      134,
      72,
      206,
      61,
      2,
      1,
      6,
      5,
      43,
      129,
      4,
      0,
      35,
      4,
      129,
      214,
      48,
      129,
      211,
      2,
      1,
      1,
      4,
      66,
      0,
      76,
      6,
      40,
      220,
      52,
      24,
      174,
      128,
      213,
      228,
      72,
      9,
      73,
      75,
      63,
      144,
      226,
      47,
      156,
      68,
      156,
      101,
      233,
      251,
      222,
      5,
      218,
      230,
      132,
      36,
      185,
      189,
      30,
      145,
      9,
      160,
      56,
      151,
      79,
      66,
      50,
      13,
      82,
      199,
      88,
      70,
      126,
      187,
      64,
      175,
      232,
      5,
      211,
      84,
      133,
      86,
      237,
      27,
      250,
      157,
      198,
      162,
      32,
      106,
      183,
      161,
      129,
      137,
      3,
      129,
      134,
      0,
      4,
      0,
      141,
      216,
      242,
      21,
      165,
      20,
      221,
      125,
      114,
      230,
      55,
      25,
      32,
      240,
      25,
      54,
      155,
      153,
      222,
      182,
      166,
      44,
      53,
      109,
      139,
      121,
      248,
      100,
      150,
      189,
      163,
      124,
      152,
      149,
      80,
      149,
      3,
      62,
      134,
      104,
      25,
      246,
      155,
      27,
      49,
      196,
      130,
      194,
      163,
      63,
      97,
      209,
      108,
      251,
      4,
      35,
      251,
      77,
      15,
      124,
      120,
      55,
      213,
      86,
      209,
      0,
      8,
      15,
      101,
      24,
      93,
      174,
      198,
      55,
      72,
      179,
      29,
      98,
      5,
      69,
      216,
      213,
      98,
      228,
      121,
      251,
      72,
      242,
      192,
      91,
      93,
      250,
      143,
      205,
      216,
      243,
      157,
      174,
      249,
      85,
      243,
      27,
      166,
      117,
      82,
      190,
      78,
      36,
      143,
      16,
      135,
      95,
      42,
      130,
      255,
      34,
      237,
      30,
      236,
      130,
      147,
      176,
      155,
      35,
      249,
      73,
      132,
      242,
      176,
      201,
      159,
    ],
    "type": "Buffer",
  },
  "publicKey": {
    "data": [
      48,
      129,
      155,
      48,
      16,
      6,
      7,
      42,
      134,
      72,
      206,
      61,
      2,
      1,
      6,
      5,
      43,
      129,
      4,
      0,
      35,
      3,
      129,
      134,
      0,
      4,
      0,
      141,
      216,
      242,
      21,
      165,
      20,
      221,
      125,
      114,
      230,
      55,
      25,
      32,
      240,
      25,
      54,
      155,
      153,
      222,
      182,
      166,
      44,
      53,
      109,
      139,
      121,
      248,
      100,
      150,
      189,
      163,
      124,
      152,
      149,
      80,
      149,
      3,
      62,
      134,
      104,
      25,
      246,
      155,
      27,
      49,
      196,
      130,
      194,
      163,
      63,
      97,
      209,
      108,
      251,
      4,
      35,
      251,
      77,
      15,
      124,
      120,
      55,
      213,
      86,
      209,
      0,
      8,
      15,
      101,
      24,
      93,
      174,
      198,
      55,
      72,
      179,
      29,
      98,
      5,
      69,
      216,
      213,
      98,
      228,
      121,
      251,
      72,
      242,
      192,
      91,
      93,
      250,
      143,
      205,
      216,
      243,
      157,
      174,
      249,
      85,
      243,
      27,
      166,
      117,
      82,
      190,
      78,
      36,
      143,
      16,
      135,
      95,
      42,
      130,
      255,
      34,
      237,
      30,
      236,
      130,
      147,
      176,
      155,
      35,
      249,
      73,
      132,
      242,
      176,
      201,
      159,
    ],
    "type": "Buffer",
  },
  "type": "EC",
  "use": "sig",
}
`;

exports[`Kryptos (EC) export should export jwk 1`] = `
{
  "alg": "ES512",
  "crv": "P-521",
  "d": "AEwGKNw0GK6A1eRICUlLP5DiL5xEnGXp-94F2uaEJLm9HpEJoDiXT0IyDVLHWEZ-u0Cv6AXTVIVW7Rv6ncaiIGq3",
  "kid": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "kty": "EC",
  "use": "sig",
  "x": "AI3Y8hWlFN19cuY3GSDwGTabmd62piw1bYt5-GSWvaN8mJVQlQM-hmgZ9psbMcSCwqM_YdFs-wQj-00PfHg31VbR",
  "y": "AAgPZRhdrsY3SLMdYgVF2NVi5Hn7SPLAW136j83Y852u-VXzG6Z1Ur5OJI8Qh18qgv8i7R7sgpOwmyP5SYTysMmf",
}
`;

exports[`Kryptos (EC) export should export pem 1`] = `
{
  "algorithm": "ES512",
  "curve": "P-521",
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIATAYo3DQYroDV5EgJ
SUs/kOIvnEScZen73gXa5oQkub0ekQmgOJdPQjINUsdYRn67QK/oBdNUhVbtG/qd
xqIgarehgYkDgYYABACN2PIVpRTdfXLmNxkg8Bk2m5netqYsNW2Lefhklr2jfJiV
UJUDPoZoGfabGzHEgsKjP2HRbPsEI/tND3x4N9VW0QAID2UYXa7GN0izHWIFRdjV
YuR5+0jywFtd+o/N2POdrvlV8xumdVK+TiSPEIdfKoL/Iu0e7IKTsJsj+UmE8rDJ
nw==
-----END PRIVATE KEY-----
",
  "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAjdjyFaUU3X1y5jcZIPAZNpuZ3ram
LDVti3n4ZJa9o3yYlVCVAz6GaBn2mxsxxILCoz9h0Wz7BCP7TQ98eDfVVtEACA9l
GF2uxjdIsx1iBUXY1WLkeftI8sBbXfqPzdjzna75VfMbpnVSvk4kjxCHXyqC/yLt
HuyCk7CbI/lJhPKwyZ8=
-----END PUBLIC KEY-----
",
  "type": "EC",
  "use": "sig",
}
`;

exports[`Kryptos (EC) to should return db 1`] = `
{
  "algorithm": "ES512",
  "createdAt": 2023-01-01T08:00:00.000Z,
  "curve": "P-521",
  "encryption": null,
  "expiresAt": 2099-01-01T08:00:00.000Z,
  "hidden": false,
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "isExternal": false,
  "issuer": "https://example.com",
  "jwksUri": "https://example.com/.well-known/jwks.json",
  "notBefore": 2023-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "privateKey": "MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIATAYo3DQYroDV5EgJSUs_kOIvnEScZen73gXa5oQkub0ekQmgOJdPQjINUsdYRn67QK_oBdNUhVbtG_qdxqIgarehgYkDgYYABACN2PIVpRTdfXLmNxkg8Bk2m5netqYsNW2Lefhklr2jfJiVUJUDPoZoGfabGzHEgsKjP2HRbPsEI_tND3x4N9VW0QAID2UYXa7GN0izHWIFRdjVYuR5-0jywFtd-o_N2POdrvlV8xumdVK-TiSPEIdfKoL_Iu0e7IKTsJsj-UmE8rDJnw",
  "publicKey": "MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAjdjyFaUU3X1y5jcZIPAZNpuZ3ramLDVti3n4ZJa9o3yYlVCVAz6GaBn2mxsxxILCoz9h0Wz7BCP7TQ98eDfVVtEACA9lGF2uxjdIsx1iBUXY1WLkeftI8sBbXfqPzdjzna75VfMbpnVSvk4kjxCHXyqC_yLtHuyCk7CbI_lJhPKwyZ8",
  "purpose": "test",
  "type": "EC",
  "updatedAt": 2023-12-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`Kryptos (EC) to should return json 1`] = `
{
  "algorithm": "ES512",
  "createdAt": 2023-01-01T08:00:00.000Z,
  "curve": "P-521",
  "encryption": null,
  "expiresAt": 2099-01-01T08:00:00.000Z,
  "expiresIn": 2366841600,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "hidden": false,
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": "https://example.com",
  "jwksUri": "https://example.com/.well-known/jwks.json",
  "modulus": null,
  "notBefore": 2023-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "purpose": "test",
  "type": "EC",
  "updatedAt": 2023-12-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`Kryptos (EC) to should return jwk with private key 1`] = `
{
  "alg": "ES512",
  "crv": "P-521",
  "d": "AEwGKNw0GK6A1eRICUlLP5DiL5xEnGXp-94F2uaEJLm9HpEJoDiXT0IyDVLHWEZ-u0Cv6AXTVIVW7Rv6ncaiIGq3",
  "exp": 4070937600,
  "iat": 1672560000,
  "iss": "https://example.com",
  "jku": "https://example.com/.well-known/jwks.json",
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "kty": "EC",
  "nbf": 1672560000,
  "owner_id": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "purpose": "test",
  "uat": 1701417600,
  "use": "sig",
  "x": "AI3Y8hWlFN19cuY3GSDwGTabmd62piw1bYt5-GSWvaN8mJVQlQM-hmgZ9psbMcSCwqM_YdFs-wQj-00PfHg31VbR",
  "y": "AAgPZRhdrsY3SLMdYgVF2NVi5Hn7SPLAW136j83Y852u-VXzG6Z1Ur5OJI8Qh18qgv8i7R7sgpOwmyP5SYTysMmf",
}
`;

exports[`Kryptos (EC) to should return jwk with public key 1`] = `
{
  "alg": "ES512",
  "crv": "P-521",
  "exp": 4070937600,
  "iat": 1672560000,
  "iss": "https://example.com",
  "jku": "https://example.com/.well-known/jwks.json",
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "kty": "EC",
  "nbf": 1672560000,
  "owner_id": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "purpose": "test",
  "uat": 1701417600,
  "use": "sig",
  "x": "AI3Y8hWlFN19cuY3GSDwGTabmd62piw1bYt5-GSWvaN8mJVQlQM-hmgZ9psbMcSCwqM_YdFs-wQj-00PfHg31VbR",
  "y": "AAgPZRhdrsY3SLMdYgVF2NVi5Hn7SPLAW136j83Y852u-VXzG6Z1Ur5OJI8Qh18qgv8i7R7sgpOwmyP5SYTysMmf",
}
`;

exports[`Kryptos (EC) to should return kryptos string 1`] = `"Kryptos<EC:ES512:3b9a051f-e1ec-562b-bf92-7cf92ec465ba>"`;
